--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<body>
 		 <h2>Cadastro</h2>
 		 <form name="cadastro">
-		 <input type="text" name="usuario">
-		 <input type="password" name="senha">
+		 <input id= "name" type="text" name="user">
+		 <input id = "password" type="password" name="password">
 		 <input id= "botao" type="button" value="login" onclick="mostraDados()">
 		 </form>
 	</body>
